--- a/desktop/src/main/resources/org/example/desktop/punto-venta-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/punto-venta-view.fxml
@@ -12,7 +12,7 @@
             prefHeight="800.0" prefWidth="1400.0"
             xmlns="http://javafx.com/javafx/17.0.12"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.example.desktop.controller.PuntoVentaController"
+            fx:controller="org.example.desktop.controller.VentaController"
             styleClass="pv-root">
 
     <left>
