--- a/desktop/src/main/resources/org/example/desktop/menu-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/menu-view.fxml
@@ -23,12 +23,12 @@
                      <Image url="@images/ion--home.png" />
                  </ImageView>
                  <VBox>
-                     <Label styleClass="welcome-title" text="Bienvenido, (user)" />
+                     <Label fx:id="labelBienvenida" styleClass="welcome-title" text="Bienvenido, (user)" />
                      <Label styleClass="welcome-subtitle" text="Seleccione modulo" />
                  </VBox>
              </HBox>
 
-             <Button fx:id="bntPuntoVenta" layoutX="158.0" layoutY="203.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, punto-venta">
+             <Button fx:id="bntPuntoVenta" layoutX="158.0" layoutY="203.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, punto-venta" onAction="#irPuntoDeVenta">
                  <graphic>
                      <VBox alignment="CENTER" spacing="10">
                          <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
@@ -38,7 +38,7 @@
                      </VBox>
                  </graphic>
              </Button>
-             <Button fx:id="btnInventario" layoutX="372.0" layoutY="203.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, inventario">
+             <Button fx:id="btnInventario" layoutX="372.0" layoutY="203.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, inventario" onAction="#irPuntoDeVenta">
                  <graphic>
                      <VBox alignment="CENTER" spacing="10">
                          <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
@@ -48,7 +48,7 @@
                      </VBox>
                  </graphic>
              </Button>
-             <Button fx:id="btnProveedores" layoutX="587.0" layoutY="203.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, proveedores">
+             <Button fx:id="btnProveedores" layoutX="587.0" layoutY="203.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, proveedores" onAction="#irProveedores">
                  <graphic>
                      <VBox alignment="CENTER" spacing="10">
                          <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
@@ -58,7 +58,7 @@
                      </VBox>
                  </graphic>
              </Button>
-             <Button fx:id="btnGraficos" layoutX="801.0" layoutY="203.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, productos">
+             <Button fx:id="btnGraficos" layoutX="801.0" layoutY="203.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, productos" onAction="#irInventario">
                  <graphic>
                      <VBox alignment="CENTER" spacing="10">
                          <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
@@ -68,7 +68,7 @@
                      </VBox>
                  </graphic>
              </Button>
-            <Button fx:id="btnGraficos1" layoutX="1015.0" layoutY="203.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, productos">
+            <Button fx:id="btnGraficos1" layoutX="1015.0" layoutY="203.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, productos" onAction="#irReportes">
                <graphic>
                   <VBox alignment="CENTER" spacing="10">
                      <children>
